# radicale-mcp

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  data_models.md  mcp_protocol.md  project_structure.md
plans/: implementation_plan.md
src/: __main__.py  caldav_client.py  config_manager.py  error_handler.py  main.py  server.py  stdio_interface.py
src/models/: __init__.py  base_model.py  event.py  journal.py  todo.py
src/operations/: __init__.py
