[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caldav-mcp"
version = "0.1.0"
description = "MCP CalDAV STDIO application for CRUD operations on events, journals, and todos"
authors = [
    {name = "MCP CalDAV Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "caldav>=0.9.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
caldav-mcp = "main:main"

[project.urls]
Homepage = "https://github.com/example/caldav-mcp"
Repository = "https://github.com/example/caldav-mcp"