[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radicale_mcp"
version = "0.1.0"
description = "MCP CalDAV STDIO application for CRUD operations on events, journals, and todos"
authors = [
    {name = "MCP CalDAV Developer"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "caldav>=0.9.0",
    "python-dateutil>=2.8.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
radicale_mcp = "server:start_server"

[project.urls]
Homepage = "https://github.com/TheGreatGooo/radicale-mcp"
Repository = "https://github.com/TheGreatGooo/radicale-mcp"